Delete data in form

--- a/src/app/Components/todos/todos.component.html
+++ b/src/app/Components/todos/todos.component.html
@@ -1,5 +1,5 @@
 <div class="todos">
-  <form (submit)="addTodo()">
+  <form (submit)="addTodo(f)" #f="ngForm">
     <input
       type="text"
       name="inputTodo"
